Main: indexing all songs